--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,17 @@ hs_err_pid*
 
 # Gradle
 .gradle
-build
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
 
 # IntelliJ
 .idea
