--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,9 +1,15 @@
-name: Java Main Build
+name: Java Release Build
 on:
-  push:
-    branches:
-      - main
-  pull_request: {}
+  workflow_dispatch:
+    inputs:
+      scope:
+        default: minor
+        description: Which version number gets incremented (one of major, minor, patch)
+        required: true
+      stage:
+        default: beta
+        description: What kind of release is this? (one of beta, rc, final)
+        required: true
 
 jobs:
   build:
@@ -26,14 +32,19 @@ jobs:
           # Building & Testing the examples project so that we can do everything in 1 build
           build-root-directory: examples
           arguments: :plugin:assemble :plugin:check assemble check --continue --stacktrace
-      - name: Publish Snapshot (on main)
+      - name: Publish Release
         if: github.ref == 'refs/heads/main'
         uses: burrunan/gradle-cache-action@cbdf4342ff988d143aa7a5aeceedffafb8c74bcf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           build-root-directory: plugin
-          arguments: publish --continue --stacktrace
+          arguments: publishPlugins --continue --stacktrace
           execution-only-caches: true
+          properties: |
+            reckon.scope=${{ github.event.inputs.scope }}
+            reckon.stage=${{ github.event.inputs.stage }}
+            gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }}
+            gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
 
 
