--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -15,14 +15,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0 # need full history for reckon (tags)
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@8d49e559aae34d3e0eb16cde532684bc9702762b
+        uses: gradle/wrapper-validation-action@56b90f209b02bf6d1deae490e9ef18b21a389cd4
       - name: Build & Test
         # https://github.com/burrunan/gradle-cache-action
         uses: burrunan/gradle-cache-action@a54b6ce2cbbba932e5d142129dddef103e6ad143
