--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -48,5 +48,10 @@ jobs:
             reckon.stage=${{ github.event.inputs.stage }}
             gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }}
             gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
+      - name: Push git tag
+        run: |
+          git push origin --tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
