--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -34,6 +34,9 @@ jobs:
           # Building & Testing the examples project so that we can do everything in 1 build
           build-root-directory: examples
           arguments: :plugin:assemble :plugin:check assemble check --continue --stacktrace
+          properties: |
+            reckon.scope=${{ github.event.inputs.scope }}
+            reckon.stage=${{ github.event.inputs.stage }}
       - name: Publish Release
         if: github.ref == 'refs/heads/main'
         uses: burrunan/gradle-cache-action@a54b6ce2cbbba932e5d142129dddef103e6ad143
@@ -49,9 +52,16 @@ jobs:
             gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }}
             gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
       - name: Push git tag
-        run: |
-          git push origin --tags
+        if: github.ref == 'refs/heads/main'
+        uses: burrunan/gradle-cache-action@a54b6ce2cbbba932e5d142129dddef103e6ad143
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          build-root-directory: plugin
+          arguments: reckonTagPush --continue --stacktrace
+          execution-only-caches: true
+          properties: |
+            reckon.scope=${{ github.event.inputs.scope }}
+            reckon.stage=${{ github.event.inputs.stage }}
 
 
